HaikuDepot: Cause and wait for the package-populator thread to exit on window close.

May help with #17689.